# context0

./: .gitignore  AGENTS.md  MISE_BUILD_FIX_SUMMARY.md  MISE_BUILD_INVESTIGATION.md  README.md  go.mod  go.sum  main.go  mise.toml  opencode.json  pyproject.toml
.gocache-build/00/: 0090ebe352b454671ed1dbfb76da949014e5bdb69e04b8be68f3051e2472cae8-a
.gocache-build/01/: 011c157d8f25a41d258cb6ebdaef8d22acfa70d73a19135ca8f081401a52482c-d
.gocache-build/02/: 021bae9c13ae479ba90077db265522874eb723859c47df71ea429392428ce697-a  022ee282642253b2f45312c49f34833df599a75ced5403f75770fc7e6d36eea4-d  02498988aaea7dcf57e5888a9d115059eb2e16f0ee32896b9e0fb64416474f69-d  02ab5c725a481554bb6e9ffc08167f7a892ccdd2ba0cdfda660302864d1dd090-a
.gocache-build/03/: 0387d696aa720ac39dfe20f53e04c7ea5152562f45759d7769b293ff6726499a-a
.gocache-build/05/: 05c6be19d61454b2b0520f47eb222d9c7b88144a4daa967f464863653f2a372c-a
.gocache-build/06/: 0603165322e9a7c25de6520c3788a20cee905f7d4254321601e5110083a55bcb-a  0635fd6a873e716194c7255fb3f1200c18fba72ee572e4d5f72f263a412d2a16-d  06d8ab8b3acae90a1e207e65755d35df9fd75c9f457ef56d3c9001c6e49309b1-d
.gocache-build/07/: 071d24b80fa3b167ae40e4ad6c77a70503318b500f152435aa4c4006f40296a8-d  07318bf47eecf831f9386c895447eb5549a50c24f0eabb949cedcbc55ee0cfe8-d
docs/: ARCHITECTURE.md  INSTALL.md  TESTING.md  USAGE.md  agenda_plan.md  codemap_plan.md  memory_plan.md  report.md
sidecar/: ask.py  context7.py  downloader.py  embed.py  inference.py  main.py  prompts.py  protocol.py  ralph.py  server.py
util/: git.go  hash.go  uri.go  util_test.go
(+470 files in other folders)
