[project]
name = "context0-sidecar"
version = "0.1.0"
description = "Python sidecar for context0 — embedding and inference engine"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.23.0",
    "mlx>=0.22.0",
    "mlx-lm>=0.21.0",
    "mlx-embeddings>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/sidecar"]
pythonpath = ["."]

[tool.uv]
# Not a distributable package — just a dependency manifest for `uv run`.
package = false
